// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account renders correctly 1`] = `
<div
  className="sc-htoDjs lkdQiJ"
>
  <div>
    <div
      className="sc-bdVaJa fmTyxS"
    />
  </div>
  <div
    className="sc-gzVnrw fSNPds"
  >
    <div
      className="sc-htpNat kMQpYq"
    >
      4.8
    </div>
    <div
      className="sc-bxivhb fxQdBO"
    >
      The Water Cure
    </div>
    <div
      className="sc-ifAKCX zuhiC"
    >
      Joanne Ramos
    </div>
    <div>
      <div
        className="sc-EHOje fEesZF"
      >
        Biography
      </div>
    </div>
  </div>
</div>
`;

exports[`Doesn´t show the button or rate 1`] = `
<div
  className="sc-htoDjs lkdQiJ"
>
  <div>
    <div
      className="sc-bdVaJa fmTyxS"
    />
  </div>
  <div
    className="sc-gzVnrw fSNPds"
  >
    <div
      className="sc-bxivhb fxQdBO"
    >
      The Water Cure
    </div>
    <div
      className="sc-ifAKCX zuhiC"
    >
      Joanne Ramos
    </div>
  </div>
</div>
`;
